# px4-llm-control

./: CLAUDE.md  README.md  package.xml  setup.cfg  setup.py
launch/: px4_llm_control.launch.py  vision.launch.py
px4_llm_control/: command_cli.py  command_gui.py  llm_planner.py  mission_executor.py
